# on-air-deck

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  mkdocs.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  windows-release.yml
Assets/: README.txt
Source/: Main.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/JUCE/modules/: Makefile  cmake_install.cmake
_codeql_build_dir/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/JUCE/tools/modules/: Makefile  cmake_install.cmake
_codeql_build_dir/OnAirDeck_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
_codeql_build_dir/OnAirDeck_artefacts/JuceLibraryCode/Release/: Defs.txt
docs/: architecture.md  bridge-api.md  build-and-run.md  dependencies.md  docs-workflow.md  documentation.html  index.html  index.md  repo-migration-sequence.md  web-ui.md
scripts/: build-windows.ps1  clean.sh  release.sh  setup-linux.sh
src/: AudioMixerComponent.h  ContentComponent.cpp  ContentComponent.h  CrossfadeComponent.h  DarkLookAndFeel.cpp  DarkLookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent.hpp  NowPlayingComponent.h  SidebarComponent.cpp  SidebarComponent.h  StreamStatusComponent.h  Theme.h  ThemeTokens.h  UpNextComponent.h  VolumeMeterComponent.h  WaveformDisplay.h  WebUIComponent.cpp  WebUIComponent.h  WebUIComponent.hpp
